MacViews: Fix accelerator handling while Omnibox is in focus.

Currently in both Cocoa and MacViewsBrowser when Omnibox is in focus the
accelerators are only handled in -[NativeWidgetMacNSWindow
performKeyEquivalent:], which internally uses ChromeCommandDispatcherDelegate,
which consults global_keyboard_shortcuts_cocoa_mac.mm's tables.

In crbug.com/620315 we're trying to migrate the
global_keyboard_shortcuts_cocoa_mac.mm's tables over to accelerator_table.cc.

BUG=665823

Review-Url: https://codereview.chromium.org/2505943002
Cr-Commit-Position: refs/heads/master@{#434436}

Former-commit-id: e405f4e5df76138d888527165ea13446a1e08296