ui/events/test/event_generator.cc
@@ -94,7 +94,7 @@ EventGenerator::EventGenerator(gfx::NativeWindow root_window)
       flags_(0),
       grab_(false),
       async_(false),
-      targeting_application_(false) {
+      target_(Target::WIDGET) {
   Init(root_window, NULL);
 }
 
@@ -105,7 +105,7 @@ EventGenerator::EventGenerator(gfx::NativeWindow root_window,
       flags_(0),
       grab_(false),
       async_(false),
-      targeting_application_(false) {
+      target_(Target::WIDGET) {
   Init(root_window, NULL);
 }
 
@@ -115,7 +115,7 @@ EventGenerator::EventGenerator(gfx::NativeWindow root_window,
       flags_(0),
       grab_(false),
       async_(false),
-      targeting_application_(false) {
+      target_(Target::WIDGET) {
   Init(root_window, window);
 }
 
@@ -125,7 +125,7 @@ EventGenerator::EventGenerator(EventGeneratorDelegate* delegate)
       flags_(0),
       grab_(false),
       async_(false),
-      targeting_application_(false) {
+      target_(Target::WIDGET) {
   Init(NULL, NULL);
 }
 
